--- a/index.html
+++ b/index.html
@@ -6,7 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/header.css" />
     <title>Tesla arch-E-mede</title>
+    <script defer type="text/javascript" src="./js/header.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img
+        class="photo-header"
+        alt="photo arch-e-mede en mer"
+        src="./img/photo-header.jpg"
+      />
+      <nav id="menu" class="menu">
+        <ul>
+          <li>Description</li>
+          <li>Technologie</li>
+          <li>Commandez</li>
+          <li>Actualités</li>
+        </ul>
+        <div id="open-menu" class="open-menu">
+          <div id="menu-icon" class="menu-icon"></div>
+        </div>
+      </nav>
+      <img
+        class="logo-tesla"
+        alt="logo-tesla"
+        src=""
+        <img
+        class="logo-arch"
+        alt="logo-arch-e-mede"
+        src="img/logo-arch.png"
+      />
+    </header>
+  </body>
 </html>
