--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img
         class="logo-tesla"
         alt="logo-tesla"
-        src=""
+        src="./img/logo-tesla.svg"
         <img
         class="logo-arch"
         alt="logo-arch-e-mede"
