--- a/index.html
+++ b/index.html
@@ -6,7 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <title>Tesla arch-E-mede</title>
   </head>
-  <body></body>
+  <body>
+    <footer class="footer">
+      <div class=" footertext">
+        <ul class="footerbox">
+          <li>
+            <a class="lien" href="https://www.tesla.com/fr_FR/about/legal"
+              >Mentions légales</a
+            >
+          </li>
+          <li>
+            <a class="lien" href="https://www.tesla.com/fr_FR/contact"
+              >Contact</a
+            >
+          </li>
+          <li>
+            <a class="lien" href="https://www.tesla.com/fr_FR/updates"
+              >Newsletter</a
+            >
+          </li>
+          <li>
+            <a
+              class="lien"
+              href="http://www.tesla-mag.com/forum/phpBB3/viewforum.php?f=48"
+              >Forum</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="footerbox footersocial">
+        <a href="https://www.instagram.com/teslamotors/?hl=fr">
+          <img class="footerlogo" src="img/logoinsta.png" alt=""
+        /></a>
+        <a href="https://twitter.com/tesla?lang=fr"
+          ><img class="footerlogo" src="img/logotwitter.png" alt=""
+        /></a>
+        <a href="https://www.facebook.com/TeslaMoto/"
+          ><img class="footerlogo" src="img/logofb.png" alt=""
+        /></a>
+        <a href="https://www.youtube.com/channel/UC5WjFrtBdufl6CZojX3D8dQ">
+          <img class="footerlogo" src="img/logoytb.png" alt="" />
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
