add timeline twitter and twitter button

--- a/article1.html
+++ b/article1.html
@@ -4,143 +4,176 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/article.css" />
+
     <title>Article 1</title>
   </head>
   <body>
     <article>
-      <h1>Quel est l’impacts actuel des gros frets sur l’environnement ?</h1>
       <section>
-        De nombreux chiffres circulent sur les émissions générées par le fret
-        maritime par rapport aux voitures. Plusieurs rumeurs circulent sur les
-        émissions générées par le fret maritime en les comparant à celles dues
-        aux voitures. On peut lire sur les réseaux, que quinze - on peut lire
-        aussi vingt, soixante etc.- grands navires pollueraient plus que toutes
-        les voitures de la planète. Qu’en est-il exactement ? De quelle
-        pollution parle-t-on ? Sur quoi a-t-elle un impact ?
+        <h1>Quel est l’impacts actuel des gros frets sur l’environnement ?</h1>
+        <p>
+          De nombreux chiffres circulent sur les émissions générées par le fret
+          maritime par rapport aux voitures. Plusieurs rumeurs circulent sur les
+          émissions générées par le fret maritime en les comparant à celles dues
+          aux voitures. On peut lire sur les réseaux, que quinze - on peut lire
+          aussi vingt, soixante etc.- grands navires pollueraient plus que
+          toutes les voitures de la planète. Qu’en est-il exactement ? De quelle
+          pollution parle-t-on ? Sur quoi a-t-elle un impact ?
+        </p>
+        <h3>
+          Le fret maritime est polluant
+        </h3>
+        <p>
+          Les cargos et porte-conteneurs utilisent l’un des carburants les plus
+          sales au monde, un résidu visqueux du pétrole, lourd et difficile à
+          brûler. Ce pétrole « bunker » est ce qui reste une fois que les autres
+          produits pétroliers – essence, naphta ou encore diesel – plus légers,
+          ont été raffinés. Seul l’asphalte utilisé pour les routes est plus
+          épais. On y trouve des résidus de métal, de la cendre, et surtout
+          beaucoup de soufre. Le carburant rejettera ainsi beaucoup de NOx et
+          SOx (oxydes d’azote et oxydes de soufre). « Importants polluants de
+          l’air, ils accélèrent la formation de particules fines et
+          ultra-fines », explique l’association écologiste France Nature
+          Environnement. Longtemps utilisé par l’industrie, notamment pour faire
+          tourner des centrales électriques, le pétrole bunker a été
+          progressivement cantonné au transport maritime en raison des pluies
+          acides qu’il provoquait. A ce niveau de 0,1 %, un porte-conteneurs
+          produirait autant d’oxydes de soufre qu’un million de voitures
+          environ. Ces calculs, partagés entre autres par France Nature
+          Environnement, ne sont que des estimations, mais ils donnent un ordre
+          d’idée qui permet d’assurer que, s’il génère une pollution
+          considérable, un cargo de fret ne représente pas l’équivalent de
+          l’intégralité du parc automobile français, ce dernier étant évalué à
+          32 millions de véhicules particuliers. En revanche, la pollution d’un
+          seul cargo équivaut à environ 50 millions de voitures dans les cas où
+          la teneur en soufre est encore de 3,5 %, une pollution tolérée dans
+          des zones de plus en plus limitées et amenées à disparaître d’ici deux
+          ans. En effet, en 2016, l’Organisation maritime internationale (OMI),
+          une entité des Nations unies, a adopté une résolution pour réduire la
+          teneur maximale en soufre à 0,5 % à partir de 2020 au niveau mondial.
+        </p>
+        <h3>Mais il émet moins de CO2 que la route.</h3>
+        <p>
+          Un transport à la fois écolo et dangereux pour la santé Ces chiffres
+          contrebalancent un fait acquis : le transport maritime est de loin le
+          moins impactant pour la planète. Il utilise moins de 10 grammes de CO2
+          pour transporter une tonne de marchandise sur un kilomètre (contre
+          18 g pour le rail, 47 g pour la route et 560 g pour le fret aérien).
+          Mais ce qui est vrai pour le CO2 l’est moins pour le soufre.
+          Pourquoi ? « Contrairement aux véhicules terrestres, dont le carburant
+          est très réglementé, les cargos utilisent un fioul lourd, un résidu de
+          raffinerie bien moins cher que le diesel », explique Benoît Hartmann,
+          porte-parole de FNE. Ce carburant émet des particules fines
+          dangereuses pour la santé. « Elles viennent se fixer dans les poumons,
+          ce qui augmente le risque de développer des maladies pulmonaires,
+          cardiaques et des cancers. » Cette pollution serait responsable de 60
+          000 décès par an dans le monde.
+        </p>
+        <p>
+          Par ailleurs, même si la pollution atmosphérique est un point
+          essentiel des enjeux écologiques actuels, il existe d’autres pollution
+          dont on parle moins, mais qui ont des impacts tout aussi important sur
+          la faune.
+        </p>
+        <h3>Eaux de ballast</h3>
+        <p>
+          Les rejets d'eaux de ballast par les navires peuvent avoir un impact
+          négatif sur le milieu marin. Les navires de croisière, les grands
+          pétroliers et les vraquiers utilisent une énorme quantité d'eaux de
+          ballast, celles-ci sont souvent captée dans les eaux côtières d'une
+          région après le rejet des eaux usées ou le déchargement de la
+          cargaison par les navires. Les eaux de ballast rejetées contiennent
+          généralement une variété de matières biologiques, notamment des
+          plantes, des animaux, des virus et des bactéries. Ces matériaux
+          comprennent souvent des espèces exotiques non indigènes, nuisibles,
+          envahissantes, qui peuvent causer des dommages écologiques et
+          économiques considérables aux écosystèmes aquatiques, ainsi que de
+          graves problèmes de santé humaine.
+        </p>
+        <h3>Pollution sonore</h3>
+        <p>
+          La pollution sonore causée par le transport maritime et d'autres
+          entreprises humaines a augmenté au cours de ces dernières années. Le
+          bruit produit par les navires peut parcourir de longues distances et
+          ainsi affecter les espèces marines qui dépendent du son pour
+          s'orienter, communiquer et se nourrir. La Convention sur la
+          conservation des espèces migratrices a identifié le bruit des océans
+          comme une menace potentielle pour la vie marine. La perturbation de la
+          capacité des baleines à communiquer les unes avec les autres est une
+          menace extrême et affecte leur capacité à survivre. Selon l'article de
+          Discovery Channel sur "les voyages maritimes dans les profondeurs
+          sonores de l'océan", au cours du dernier siècle, des bruits
+          extrêmement forts provenant des navires de commerce, de l'exploration
+          pétrolière et gazière, des exercices de sonar maritime et d'autres
+          sources ont transformé le délicat habitat acoustique de l'océan,
+          affectant ainsi la capacité des baleines et des autres espèces marines
+          à prospérer et à survivre. Les baleines commencent à réagir à cette
+          situation d'une manière qui met leur vie en danger. Kenneth C.
+          Balcomb, chercheur sur les baleines et ancien officier de la marine
+          américaine, déclare que le jour du 15 mars 2000 est le jour de
+          l’infamie. Lui et son équipe ont découvert des baleines nageant
+          dangereusement près du rivage alors qu'elles sont censées être en eau
+          profonde. Bien que le sonar aide à nous protéger, il détruit la vie
+          marine. Selon Katie Moore, directrice du programme de sauvetage des
+          animaux d'IFAW, les sons peuvent affecter les animaux de différentes
+          manières. Il existe également un niveau de bruit ambiant sous-jacent
+          qui ne cesse d´augmenter et qui interfère avec la communication des
+          baleines et leurs schémas de déplacement. Ce type de sons plus aigus
+          cause des impacts traumatiques, qui provoquent des dommages physiques
+          ou une très forte réaction comportementale chez les baleines.
+        </p>
+        <h3>Transport maritime : quelles alternatives à termes ?</h3>
+        <p>
+          Des alternatives existent à ce fioul lourd. La plus simple à mettre en
+          œuvre est le GNL (Gaz naturel liquéfié), nettement moins polluant
+          (presque aucune émission de soufre et de particules fines, et génère
+          30% de gaz carbonique (CO2) de moins que le fioul). L’hydrogène a
+          également un potentiel important, il est la meilleure solution pour
+          décarboner intégralement, à termes, le transport maritime, mais n’est
+          pas encore mature. Autre solution en cours de déploiement : équiper
+          les ports de câbles électriques permettant aux navires, une fois à
+          quai, de cesser de brûler du fioul pour produire de l’électricité
+          (comme une majorité le font encore actuellement). En septembre
+          dernier, avec le dispositif “escales zéro fumée“, Renaud Muselier
+          annonçait ainsi un plan d’investissement de 30 millions d’euros en
+          faveur de l’électrification des navires à quai dans les ports de
+          Marseille, Toulon et Nice.
+        </p>
+        <p>
+          La véritable révolution viendra quand nous pourront créer des cargos
+          auto-suffisant qui pourront recharger leurs batteries au cours de la
+          navigation. Le tout en combinant les énergies solaires et hydraulique
+          (voir éolienne). Cette révolution, c’est l’objectif que Tesla s’est
+          fixé d’atteindre dans ces 5 prochaines années. Rendre les routes et la
+          mer plus propre et plus habitable pour toutes les espèces.
+        </p>
+        <p class="auteurs">Par Ronald McDonald et Eddy Merx</p>
       </section>
-      <h3>
-        Le fret maritime est polluant
-      </h3>
-      <section>
-        Les cargos et porte-conteneurs utilisent l’un des carburants les plus
-        sales au monde, un résidu visqueux du pétrole, lourd et difficile à
-        brûler. Ce pétrole « bunker » est ce qui reste une fois que les autres
-        produits pétroliers – essence, naphta ou encore diesel – plus légers,
-        ont été raffinés. Seul l’asphalte utilisé pour les routes est plus
-        épais. On y trouve des résidus de métal, de la cendre, et surtout
-        beaucoup de soufre. Le carburant rejettera ainsi beaucoup de NOx et SOx
-        (oxydes d’azote et oxydes de soufre). « Importants polluants de l’air,
-        ils accélèrent la formation de particules fines et ultra-fines »,
-        explique l’association écologiste France Nature Environnement. Longtemps
-        utilisé par l’industrie, notamment pour faire tourner des centrales
-        électriques, le pétrole bunker a été progressivement cantonné au
-        transport maritime en raison des pluies acides qu’il provoquait. A ce
-        niveau de 0,1 %, un porte-conteneurs produirait autant d’oxydes de
-        soufre qu’un million de voitures environ. Ces calculs, partagés entre
-        autres par France Nature Environnement, ne sont que des estimations,
-        mais ils donnent un ordre d’idée qui permet d’assurer que, s’il génère
-        une pollution considérable, un cargo de fret ne représente pas
-        l’équivalent de l’intégralité du parc automobile français, ce dernier
-        étant évalué à 32 millions de véhicules particuliers. En revanche, la
-        pollution d’un seul cargo équivaut à environ 50 millions de voitures
-        dans les cas où la teneur en soufre est encore de 3,5 %, une pollution
-        tolérée dans des zones de plus en plus limitées et amenées à disparaître
-        d’ici deux ans. En effet, en 2016, l’Organisation maritime
-        internationale (OMI), une entité des Nations unies, a adopté une
-        résolution pour réduire la teneur maximale en soufre à 0,5 % à partir de
-        2020 au niveau mondial.
-      </section>
-      <h3>Mais il émet moins de CO2 que la route.</h3>
-      <section>
-        Un transport à la fois écolo et dangereux pour la santé Ces chiffres
-        contrebalancent un fait acquis : le transport maritime est de loin le
-        moins impactant pour la planète. Il utilise moins de 10 grammes de CO2
-        pour transporter une tonne de marchandise sur un kilomètre (contre 18 g
-        pour le rail, 47 g pour la route et 560 g pour le fret aérien). Mais ce
-        qui est vrai pour le CO2 l’est moins pour le soufre. Pourquoi ?
-        « Contrairement aux véhicules terrestres, dont le carburant est très
-        réglementé, les cargos utilisent un fioul lourd, un résidu de raffinerie
-        bien moins cher que le diesel », explique Benoît Hartmann, porte-parole
-        de FNE. Ce carburant émet des particules fines dangereuses pour la
-        santé. « Elles viennent se fixer dans les poumons, ce qui augmente le
-        risque de développer des maladies pulmonaires, cardiaques et des
-        cancers. » Cette pollution serait responsable de 60 000 décès par an
-        dans le monde.
-      </section>
-      <section>
-        Par ailleurs, même si la pollution atmosphérique est un point essentiel
-        des enjeux écologiques actuels, il existe d’autres pollution dont on
-        parle moins, mais qui ont des impacts tout aussi important sur la faune.
-      </section>
-      <h3>Eaux de ballast</h3>
-      <section>
-        Les rejets d'eaux de ballast par les navires peuvent avoir un impact
-        négatif sur le milieu marin. Les navires de croisière, les grands
-        pétroliers et les vraquiers utilisent une énorme quantité d'eaux de
-        ballast, celles-ci sont souvent captée dans les eaux côtières d'une
-        région après le rejet des eaux usées ou le déchargement de la cargaison
-        par les navires. Les eaux de ballast rejetées contiennent généralement
-        une variété de matières biologiques, notamment des plantes, des animaux,
-        des virus et des bactéries. Ces matériaux comprennent souvent des
-        espèces exotiques non indigènes, nuisibles, envahissantes, qui peuvent
-        causer des dommages écologiques et économiques considérables aux
-        écosystèmes aquatiques, ainsi que de graves problèmes de santé humaine.
-      </section>
-      <h3>Pollution sonore</h3>
-      <section>
-        La pollution sonore causée par le transport maritime et d'autres
-        entreprises humaines a augmenté au cours de ces dernières années. Le
-        bruit produit par les navires peut parcourir de longues distances et
-        ainsi affecter les espèces marines qui dépendent du son pour s'orienter,
-        communiquer et se nourrir. La Convention sur la conservation des espèces
-        migratrices a identifié le bruit des océans comme une menace potentielle
-        pour la vie marine. La perturbation de la capacité des baleines à
-        communiquer les unes avec les autres est une menace extrême et affecte
-        leur capacité à survivre. Selon l'article de Discovery Channel sur "les
-        voyages maritimes dans les profondeurs sonores de l'océan", au cours du
-        dernier siècle, des bruits extrêmement forts provenant des navires de
-        commerce, de l'exploration pétrolière et gazière, des exercices de sonar
-        maritime et d'autres sources ont transformé le délicat habitat
-        acoustique de l'océan, affectant ainsi la capacité des baleines et des
-        autres espèces marines à prospérer et à survivre. Les baleines
-        commencent à réagir à cette situation d'une manière qui met leur vie en
-        danger. Kenneth C. Balcomb, chercheur sur les baleines et ancien
-        officier de la marine américaine, déclare que le jour du 15 mars 2000
-        est le jour de l’infamie. Lui et son équipe ont découvert des baleines
-        nageant dangereusement près du rivage alors qu'elles sont censées être
-        en eau profonde. Bien que le sonar aide à nous protéger, il détruit la
-        vie marine. Selon Katie Moore, directrice du programme de sauvetage des
-        animaux d'IFAW, les sons peuvent affecter les animaux de différentes
-        manières. Il existe également un niveau de bruit ambiant sous-jacent qui
-        ne cesse d´augmenter et qui interfère avec la communication des baleines
-        et leurs schémas de déplacement. Ce type de sons plus aigus cause des
-        impacts traumatiques, qui provoquent des dommages physiques ou une très
-        forte réaction comportementale chez les baleines.
-      </section>
-      <h3>Transport maritime : quelles alternatives à termes ?</h3>
-      <section>
-        Des alternatives existent à ce fioul lourd. La plus simple à mettre en
-        œuvre est le GNL (Gaz naturel liquéfié), nettement moins polluant
-        (presque aucune émission de soufre et de particules fines, et génère 30%
-        de gaz carbonique (CO2) de moins que le fioul). L’hydrogène a également
-        un potentiel important, il est la meilleure solution pour décarboner
-        intégralement, à termes, le transport maritime, mais n’est pas encore
-        mature. Autre solution en cours de déploiement : équiper les ports de
-        câbles électriques permettant aux navires, une fois à quai, de cesser de
-        brûler du fioul pour produire de l’électricité (comme une majorité le
-        font encore actuellement). En septembre dernier, avec le dispositif
-        “escales zéro fumée“, Renaud Muselier annonçait ainsi un plan
-        d’investissement de 30 millions d’euros en faveur de l’électrification
-        des navires à quai dans les ports de Marseille, Toulon et Nice.
-      </section>
-      <section>
-        La véritable révolution viendra quand nous pourront créer des cargos
-        auto-suffisant qui pourront recharger leurs batteries au cours de la
-        navigation. Le tout en combinant les énergies solaires et hydraulique
-        (voir éolienne).  Cette révolution, c’est l’objectif que Tesla s’est
-        fixé d’atteindre dans ces 5 prochaines années. Rendre les routes et la
-        mer plus propre et plus habitable pour toutes les espèces.
-      </section>
+      <aside>
+        <a
+          class="twitter-timeline"
+          href="https://twitter.com/arch_e_mede?ref_src=twsrc%5Etfw"
+          >Tweets by arch_e_mede</a
+        >
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+        <a
+          href="https://twitter.com/intent/tweet?button_hashtag=archemede&ref_src=twsrc%5Etfw"
+          class="twitter-hashtag-button"
+          data-show-count="false"
+          >Tweet #archemede</a
+        >
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+      </aside>
     </article>
   </body>
 </html>
