header style photo logo

--- a/index.html
+++ b/index.html
@@ -15,28 +15,23 @@
       <img
         class="photo-header"
         alt="photo arch-e-mede en mer"
-        src="./img/photo-header.jpg"
+        src="./img/boat in mouvement.jpg"
       />
-      <nav id="menu" class="menu">
-        <ul>
-          <li>Description</li>
-          <li>Technologie</li>
-          <li>Commandez</li>
-          <li>Actualités</li>
-        </ul>
-        <div id="open-menu" class="open-menu">
-          <div id="menu-icon" class="menu-icon"></div>
-        </div>
-      </nav>
-      <img
-        class="logo-tesla"
-        alt="logo-tesla"
-        src="./img/logo-tesla.svg"
-        <img
-        class="logo-arch"
-        alt="logo-arch-e-mede"
-        src="img/logo-arch.png"
-      />
+      <div class="header-wrapper">
+        <nav id="menu" class="menu">
+          <ul>
+            <li>Description</li>
+            <li>Technologie</li>
+            <li>Commandez</li>
+            <li>Actualités</li>
+          </ul>
+          <div id="open-menu" class="open-menu">
+            <div id="menu-icon" class="menu-icon"></div>
+          </div>
+        </nav>
+        <img class="logo-tesla" alt="logo-tesla" src="./img/logo-tesla.png" />
+      </div>
+      <img class="logo-arch" alt="logo-arch-e-mede" src="img/logo-arch.jpg" />
     </header>
   </body>
 </html>
