--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="css/form.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/description-otpions.css" />
     <title>Tesla arch-E-mede</title>
     <script defer type="text/javascript" src="./js/header.js"></script>
   </head>
   <body>
-     <header>
+    <header>
       <img
         class="photo-header"
         alt="photo arch-e-mede en mer"
@@ -21,7 +22,7 @@
       />
       <div class="header-wrapper">
         <nav id="menu" class="menu">
-          <ul>
+          <ul class="menu-items">
             <li>Description</li>
             <li>Technologie</li>
             <li>Commandez</li>
@@ -35,6 +36,11 @@
       </div>
       <img class="logo-arch" alt="logo-arch-e-mede" src="img/logo-arch.jpg" />
     </header>
+    <section class="descritpion-wrapper">
+      <div class="descritpion-image">
+
+      </div>
+    </section>
     <hr class="separation" />
     <section class="form-section">
       <div class="form-overlay">
