--- a/index.html
+++ b/index.html
@@ -90,13 +90,20 @@
           </div>
           <div class="color-choice">
             <h3>Couleur du bateau</h3>
-            <div class="colors" name>
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
-              <div class="color"></div>
-            </div>
+            <ul class="colors" name>
+              <li>
+                <img class="color-sample" src="img/colors/color-black.png" />
+              </li>
+              <li>
+                <img class="color-sample" src="img/colors/color-blue.png" />
+              </li>
+              <li>
+                <img class="color-sample" src="img/colors/color-red.png" />
+              </li>
+              <li>
+                <img class="color-sample" src="img/colors/color-white.png" />
+              </li>
+            </ul>
             <div class="help-text">Veuillez choisir une couleur</div>
           </div>
           <div class="option-checkbox">
