correction of li and add class header li

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       />
       <div class="header-wrapper">
         <nav id="menu" class="menu">
-          <ul class="menu-items">
-            <li>Description</li>
-            <li>Technologie</li>
-            <li>Commandez</li>
-            <li>Actualités</li>
+          <ul class="menu-list">
+            <li class="header-items">Description</li>
+            <li class="header-items">Technologie</li>
+            <li class="header-items">Commandez</li>
+            <li class="header-items">Actualités</li>
           </ul>
           <div id="open-menu" class="open-menu">
             <div id="menu-icon" class="menu-icon"></div>
