change name of li class header

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <div class="header-wrapper">
         <nav id="menu" class="menu">
           <ul class="menu-list">
-            <li class="header-items">Description</li>
-            <li class="header-items">Technologie</li>
-            <li class="header-items">Commandez</li>
-            <li class="header-items">Actualités</li>
+            <li class="menu-items">Description</li>
+            <li class="menu-items">Technologie</li>
+            <li class="menu-items">Commandez</li>
+            <li class="menu-items">Actualités</li>
           </ul>
           <div id="open-menu" class="open-menu">
             <div id="menu-icon" class="menu-icon"></div>
