--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
           <div class="color-choice">
             <h3>Couleur du bateau</h3>
             <ul class="colors" name>
-              <li>
-                <img class="color-sample" src="img/colors/color-black.png" />
+              <li class="color-li is-selected">
+                <img class="color-sample " src="img/colors/color-black.png" />
               </li>
-              <li>
+              <li class="color-li">
                 <img class="color-sample" src="img/colors/color-blue.png" />
               </li>
-              <li>
+              <li class="color-li">
                 <img class="color-sample" src="img/colors/color-red.png" />
               </li>
-              <li>
+              <li class="color-li">
                 <img class="color-sample" src="img/colors/color-white.png" />
               </li>
             </ul>
