--- a/article1.html
+++ b/article1.html
@@ -103,7 +103,7 @@
           économiques considérables aux écosystèmes aquatiques, ainsi que de
           graves problèmes de santé humaine.
         </p>
-        <h3>Pollution sonore</h3>
+        <h3 class="sonore">Pollution sonore</h3>
         <p>
           La pollution sonore causée par le transport maritime et d'autres
           entreprises humaines a augmenté au cours de ces dernières années. Le
@@ -160,7 +160,7 @@
               title="Cliquez pour agrandir"
           /></a>
         </p>
-        <p>
+        <p class="conclusion">
           La véritable révolution viendra quand nous pourront créer des cargos
           auto-suffisant qui pourront recharger leurs batteries au cours de la
           navigation. Le tout en combinant les énergies solaires et hydraulique
