--- a/article2.html
+++ b/article2.html
@@ -30,6 +30,7 @@
           consommateurs. Tesla entre dans le marché des bateaux, en se
           démarquant des autres concurrents, puisqu’elle est électrique.
         </p>
+        <img class="article2photo" src="boat3.jpg" alt="" />
         <h3>
           À la pointe du futurisme.
         </h3>
